pkg/cap/msg/errors/example/ue/record.i18n.go
// generated by cap from record.toml at 2019-12-19 17:34:05.6499648 +0800 CST m=+0.028890201, DO NOT EDIT.
package ue

import "golang.org/x/text/language"

func init() {
	initTrRegistry()
	ue_lr.addTranslation(ERR_RECORD_12, language.Make("zh-CN"), "根据记录ID[%d/%s]更新记录信息失败")
	ue_lr.addTranslation(ERR_RECORD_14, language.Make("zh-CN"), "根据记录ID[%d]分表失败")
	ue_lr.addTranslation(ERR_RECORD_11, language.Make("zh-CN"), "根据记录ID[%d/%s]删除记录信息失败")
	ue_lr.addTranslation(ERR_RECORD_1, language.Make("zh-CN"), "删除记录索引失败")
	ue_lr.addTranslation(ERR_RECORD_2, language.Make("zh-CN"), "创建记录表[%s]失败")
	ue_lr.addTranslation(ERR_RECORD_4, language.Make("zh-CN"), "更新记录索引[%s]失败")
	ue_lr.addTranslation(ERR_RECORD_6, language.Make("zh-CN"), "创建记录表[%s]索引信息失败")
	ue_lr.addTranslation(ERR_RECORD_10, language.Make("zh-CN"), "根据条件查询记录信息总行数失败")
	ue_lr.addTranslation(ERR_RECORD_13, language.Make("zh-CN"), "创建记录信息失败")
	ue_lr.addTranslation(ERR_RECORD_9, language.Make("zh-CN"), "根据条件查询记录信息失败")
	ue_lr.addTranslation(ERR_RECORD_7, language.Make("zh-CN"), "根据条件查询索引信息失败")
	ue_lr.addTranslation(ERR_RECORD_3, language.Make("zh-CN"), "查询所有记录索引信息失败")
	ue_lr.addTranslation(ERR_RECORD_5, language.Make("zh-CN"), "根据时间[%s]查询记录索引信息失败")
	ue_lr.addTranslation(ERR_RECORD_8, language.Make("zh-CN"), "根据记录ID[%d/%s]查找记录信息失败")
}
